new endpoint resource: cartas for global requests
