# routes/init.go
@@ -14,10 +14,14 @@ func Init(server *echo.Echo) {
 	//Endpoints de utilidad
 	server.GET("/docs/*", echoSwagger.WrapHandler)
 	server.Static("/assets/", "assets")
+	//Endpoints de uso general
+	server.GET("/api/cartas/getid/:id", controllers.GetObjectById)
 	//Endpoints para heroe
-	server.GET("/api/heroes/:id", controllers.GetHeroe)
 	server.GET("/api/heroes/", controllers.GetHeroeList)
 	server.GET("/api/heroes/name/", controllers.GetHeroeListByName)
 	server.POST("/api/heroes/", controllers.PostHeroe)
 	server.PATCH("api/heroes/", controllers.PatchHeroe)
+	//Endpoints para consumible
+	server.GET("/api/consumible/", controllers.GetConsumibleList)
+	server.GET("/api/consumible/name/", controllers.GetConsumibleListByName)
 }
